# sptfydl

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/spotify/: access_token.rs  mod.rs  search.rs  types.rs
src/spotify/search/: album.rs  playlist.rs  track.rs
src/ytmusic/: auth.rs  mod.rs
src/ytmusic/search/: mod.rs
src/ytmusic/search/parsing/: helpers.rs  mod.rs
