[package]
name = "sptfydl"
version = "0.1.0"
edition = "2024"
description = "a tool to download spotify links"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

reqwest = { version = "0.13.1", features = ["blocking", "form", "query", "json", "gzip"] }
regex = { version = "1.12.2", features = ["perf", "std", "unicode-perl"], default-features = false }
sha1 = { version = "0.10.6" }
base64 = "0.22.1"
serde_json = "1.0.149"
chrono = "0.4.43"
serde_yaml = "0.9.34"
dialoguer = "0.12.0"
tracing-panic = "0.1.2"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
