[package]
name = "sptfydl"
version = "0.1.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/Trevrosa/sptfydl"
description = "a tool to download spotify links"
keywords = ["spotify", "download", "songs"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "process"] }
async-channel = "2.5.0"

indicatif = "0.18.3"
tracing-indicatif = "0.3.14"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

reqwest = { version = "0.13.1", features = ["form", "query", "json", "gzip"] }
regex = { version = "1.12.2", features = ["perf", "std", "unicode-perl"], default-features = false }
sha1 = { version = "0.10.6" }
base64 = "0.22.1"
serde_json = "1.0.149"
chrono = "0.4.43"
serde_yaml = "0.9.34"
dialoguer = "0.12.0"
tracing-panic = "0.1.2"
ctrlc = "3.5.1"
console = "0.16.2"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
